--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -128,8 +128,8 @@
 }
 
 .homei:hover {
-  box-shadow: 0 2px 10px #2ab0ee;
-  background-color: #2ab0ee;
+  box-shadow: 0 2px 10px #47a148;
+  background-color: #47a148;
   color: #ffffff !important;
 }
 
@@ -140,8 +140,8 @@
 }
 
 .ec:hover {
-  box-shadow: 0 2px 10px #eb6559;
-  background-color: #eb6559;
+  box-shadow: 0 2px 10px #47a148;
+  background-color: #47a148;
   color: #ffffff !important;
 }
 
@@ -152,8 +152,8 @@
 }
 
 .xp:hover {
-  box-shadow: 0 2px 10px #f7b908;
-  background-color: #f7b908;
+  box-shadow: 0 2px 10px #47a148;
+  background-color: #47a148;
   color: #ffffff !important;
 }
 
@@ -164,8 +164,8 @@
 }
 
 .projects:hover {
-  box-shadow: 0 2px 10px #e44160;
-  background-color: #e44160;
+  box-shadow: 0 2px 10px #47a148;
+  background-color: #47a148;
   color: #ffffff !important;
 }
 
