--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -81,8 +81,18 @@
   cursor: pointer;
 }
 
+.greeting-text-div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 /* Media Query */
 @media (max-width: 1380px) {
+  .greeting-text-div {
+    flex-direction: column;
+  }
+
   .greeting-text {
     font-size: 50px;
   }
